# rbrew

./: Cargo.toml  build.rs
.cargo/: config.toml
configs/: gamecube.toml
examples/gc/: Cargo.toml
lib/rbrew-gc/: Cargo.toml
lib/rbrew-gc/src/: lib.rs
lib/rbrew-gc/src/gfx/: video.rs
shared/: Cargo.toml
shared/rbrew-shared-macros/: Cargo.toml
shared/rbrew-shared-macros/src/: iotype.rs  lib.rs
shared/rbrew-shared-types/: Cargo.toml
shared/src/: lib.rs
src/: lib.rs  main.rs  tools.rs
src/tools/: elf2dol.rs
targets/: gamecube.json
