[package]
name = "cargo-rbrew"
version = "0.0.3"
edition = "2021"
description = "work in progress"
build = "build.rs"
license-file = "LICENSE"
incluide = [
  "targets/*"
]

[dependencies]
argp = "0.3.0"
json = "0.12.4"

[workspace]
members = [
  "lib/rbrew-gc", 

  "shared",
  "shared/rbrew-shared-types",
  "shared/rbrew-shared-macros",
]

[workspace.dependencies]
rbrew-shared = { path = "shared" }

spin = "0.9.8"
