[package]
name = "cargo-rbrew"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/rbrew-framework/rbrew"
description = "work in progress"
build = "build.rs"
default-run = "local-rbrew"
license-file = "LICENSE"
incluide = [
  "targets/*"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-rbrew"
path = "bin/cargo.rs"

[[bin]]
name = "local-rbrew"
path = "bin/local.rs"

[dependencies]
argp = "0.3.0"
json = "0.12.4"

[workspace]
members = [
  "lib/rbrew-gc", 

  "shared",
  "shared/rbrew-shared-types",
  "shared/rbrew-shared-macros",
]

[workspace.dependencies]
rbrew-shared = { path = "shared" }

spin = "0.9.8"
